Correcting a minor CSS error. No such value as "center" for vertical-align
git-svn-id: http://svn.osqa.net/svnroot/osqa/trunk@250 0cfe37f9-358a-4d5e-be75-b63607b5c754

--- a/forum/skins/default/media/style/style.css
+++ b/forum/skins/default/media/style/style.css
@@ -1356,7 +1356,7 @@ div.comment-tools a:hover {
 .comment-form-buttons input {
     width: 100%;
     height: 22px;
-    vertical-align: center;
+    vertical-align: middle;
     margin-top: 6px;
 }
 
